@@ -1,3 +1,8 @@
+2005-06-05  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* ldexp.c (exp_mark_used_section): Set SEC_KEEP on current
+	section only if the symbol will be defined.
+
 2005-06-04  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR 992
